# crewai-agents

./: README.md  pyproject.toml
src/auditia/: crew.py  main.py
src/auditia/config/: agents.yaml  tasks.yaml
